# Selector

./: .bandit.yml  .buildinfo  .codecov.yml  .coveragerc  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .roberto.yaml  CNAME  CODE_OF_CONDUCT.md  Dockerfile  HEADER  MANIFEST.in  README.md  README_hf.md  api_measures_converter.html  api_measures_diversity.html  api_measures_similarity.html  api_methods_base.html  api_methods_distance.html  api_methods_partition.html  api_methods_similarity.html  api_methods_utils.html  base.html  codecov.yml  dissimilarity.html  genindex.html  installation.html  intro.html  objects.inv  partition.html  py-modindex.html  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  (+14 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci_codecov.yml  ci_rob.yml  ci_tox.yaml  ci_tox.yml  interface_auto.yml  pypi_release.yaml  python-publish.yml  release.yaml  webapp_auto.yml  website_auto.yaml  website_auto.yml
DiverseSelector/: MaxMin.py  Optisim.py  Selectors.py  __init__.py  _version.py  base.py  clustering_based.py  converter.py  dissimilarity_based.py  distance.py  diversity.py  feature.py  features.py  max_ndis.py  metric.py  nary_tools.py  selectors.py  utils.py
DiverseSelector/examples/: MinMax selection example.ipynb  clustering_example.ipynb
DiverseSelector/methods/: __init__.py  base.py  clustering.py  dissimilarity.py  partition.py  similarity.py  utils.py
DiverseSelector/methods/tests/: common.py  test_clustering.py  test_dissimilarity.py  test_partition.py  test_similarity.py
DiverseSelector/molecules/: features.py  utils.py
DiverseSelector/molecules/tests/: __init__.py  test_feature.py
DiverseSelector/test/: __init__.py  common.py  test_ClusteringBased.py  test_DissimilarityBased.py  test_DiverseSelector.py  test_MaxMin.py  test_clustering_based.py  test_converter.py  test_dissimilarity_based.py  test_distance.py  test_diversity.py  test_feature.py  test_metric.py  test_metrics.py  test_selectors.py  test_similarity.py  test_util.py
DiverseSelector/test/data/: drug_mols.smi  drug_mols_MaCCSKeys.csv  drug_mols_RDKitfp.csv  drug_mols_desc_rdkit.csv  drug_mols_morgan.csv  mock_features.csv
DiverseSelector/test/test2/: BBB_SECFP6_1024.xlsx  BBB_SECFP6_2048.xlsx  build_models copy.py  scratch_19.py
DiverseSelector/tests/: common.py  test_converter.py  test_diversity.py
DiverseSelector/tests/data/: drug_mols.sdf  drug_mols_desc_padel.csv  drug_mols_desc_rdkit_frag.csv  drug_mols_desc_sdf_3d.csv  drug_mols_desc_smi.csv  drug_mols_ecfp6.csv  drug_mols_secfp6.csv  mock_features.xlsx
_sources/: api_methods_base.rst  api_methods_distance.rst  api_methods_similarity.rst  installation.md  intro.md  tutorial_distance_based.ipynb  tutorial_image_classification.ipynb  tutorial_partition_based.ipynb  tutorial_similarity_based.ipynb
book/content/: _config.yml  _toc.yml  api_measures.rst  api_measures_converter.rst  api_measures_diversity.rst  api_measures_similarity.rst  api_methods.rst  api_methods_partition.rst  api_methods_utils.rst  dissimilarity.rst  installation.ipynb  intro.md  notebooks.ipynb  partition.rst  references.bib  requirements.txt  starting.ipynb  utils.rst
book/content/_build/.doctrees/: base.doctree  dissimilarity.doctree  environment.pickle  installation.doctree  intro.doctree  markdown.doctree  notebooks.doctree  partition.doctree  starting.doctree  utils.doctree
book/content/_build/html/: .buildinfo  base.html  dissimilarity.html  genindex.html  installation.html  intro.html  markdown.html  notebooks.html  objects.inv  partition.html  py-modindex.html  search.html  searchindex.js  starting.html  utils.html
book/content/_build/html/_sources/: base.rst  dissimilarity.rst  installation.ipynb  intro.md  partition.rst  starting.ipynb  (+1 more)
book/content/_build/jupyter_execute/: installation.ipynb  installation.py  notebooks.ipynb  notebooks.py  starting.ipynb  starting.py
demo_sample_20220512_v2/: demo_20220512_v2.ipynb  demo_mols_2d.sdf  demo_mols_3d.sdf  demo_mols_3d_features.csv  hello.json  hello.txt
devtools/: README.md
doc/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.txt  requirements.yaml
doc/api/: api_index.rst  base.rst  distance.rst  diversity.rst  features.rst  selectors.rst  utils.rst
doc/autosummary/: DiverseSelector.base.rst  DiverseSelector.distance.rst  DiverseSelector.selectors.rst
doc/notebooks/: diversity_subsect_selection_synthetic_data.ipynb
doc/notebooks/evil_example/: README.md  evil_example.py
doc/notebooks/evil_example/different_sample_method/: plot.py
doc/notebooks/evil_example/kernel_choose/: kernel_choose.py
docs/: CNAME
notebooks/: generate_data_pes_4well.py  quick_start.ipynb  tutorial_distance_based.ipynb  tutorial_diversity_measures.ipynb  tutorial_image_classification.ipynb  tutorial_partition_based.ipynb  tutorial_similarity_based.ipynb
selector/: __init__.py  _version.py  converter.py  distance.py  diversity.py  similarity.py
selector/measures/: __init__.py  converter.py  diversity.py  init.py  similarity.py
selector/measures/tests/: __init__.py  common.py  test_converter.py  test_diversity.py
selector/methods/: __init__.py  base.py  dissimilarity.py  distance.py  partition.py  sim.py  similarity.py  utils.py
selector/methods/tests/: __init__.py  common.py  test_dissimilarity.py  test_distance.py  test_partition.py  test_sim.py  test_similarity.py
selector/methods/tests/data/: coords_imbalance_case1.txt  coords_imbalance_case2.txt  labels_imbalance_case1.txt  labels_imbalance_case2.txt  ref_esim_selection_data.csv
selector/tests/: __init__.py  common.py  test_converter.py  test_distance.py  test_diversity.py  test_similarity.py
selector/tests/data/: ref_similarity_data.csv
streamlit_app/: Selector.py  app.py  features.py  utils.py
streamlit_app/pages/: 1_MaxMin.py  2_MaxSum.py  FeatureMatrixConversion.py  GridPartition.py  Medoid.py  OptiSim.py  page_DISE.py  page_MaxSum.py  page_maxmin.py
(+38 files in other folders)
