[metadata]
name = DiverseSelector
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.9

[coverage:run]
omit =
    DiverseSelector/methods/tests/*
    */tests/*
    DiverseSelector/_version.py

[yapf]
COLUMN_LIMIT = 109
INDENT_WIDTH = 4
USE_TABS = False

[versioneer]
VCS = git
style = pep440
versionfile_source = DiverseSelector/_version.py
versionfile_build = DiverseSelector/_version.py
tag_prefix = ""

[aliases]
test = pytest
